--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
-        <meta name="description" content="This is an example of a
-        meta description. This will often show up in search results.">
+        <meta name="description" content="This site is me practicing netlify.">
        
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -18,8 +17,10 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#9f00a7">
     <meta name="theme-color" content="#ffffff">
+
 </head>
 <body>
+    <header>Generate modesty</header>
     
 </body>
 </html>
